<resources>
    <string name="app_name">OneWorld</string>

    <string name="message_seen">Seen</string>
    <string name="message_delivered">Delivered</string>
    <string name="no_messages">No Messages</string>
    <string name="new_message">New Message</string>
    <string name="message_and_time_format">%1$s (%2$s)</string>
    <string name="username_and_message_format">%1$s: %2$s</string>
    <string name="username_and_age_format">%1$s, %2$d</string>

    <string name="failed_to_upload_image">Failed to upload image!</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>

    <string-array name="username_knows_language">
        <item name="username_knows_language">%1$s speaks %2$s</item>
        <item name="he_knows_language">He speaks %2$s</item>
        <item name="she_knows_language">She speaks %2$s</item>
    </string-array>

    <string-array name="username_is_from_country">
        <item name="username_is_from_country">%1$s is from %2$s</item>
        <item name="he_is_from_country">He is from %2$s</item>
        <item name="she_is_from_country">She is from %2$s</item>
    </string-array>

    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="portuguese">Portuguese</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="turkish">Turkish</string>

    <string name="russia">Russia</string>
    <string name="uk">UK</string>
    <string name="germany">Germany</string>
    <string name="spain">Spain</string>
    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="china">China</string>
    <string name="usa">USA</string>
    <string name="canada">Canada</string>
    <string name="brazil">Brazil</string>
    <string name="india">India</string>
    <string name="japan">Japan</string>
    <string name="israel">Israel</string>
    <string name="australia">Australia</string>
    <string name="finland">Finland</string>
    <string name="sweden">Sweden</string>
    <string name="poland">Poland</string>
    <string name="argentina">Argentina</string>
    <string name="austria">Austria</string>
    <string name="belgium">Belgium</string>
    <string name="chad">Chad</string>
    <string name="chile">Chile</string>
    <string name="colombia">Colombia</string>
    <string name="czech_republic">Czech_republic</string>
    <string name="denmark">Denmark</string>
    <string name="georgia">Georgia</string>
    <string name="greece">Greece</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="indonesia">Indonesia</string>
    <string name="ireland">Ireland</string>
    <string name="jamaica">Jamaica</string>
    <string name="malaysia">Malaysia</string>
    <string name="mexico">Mexico</string>
    <string name="netherlands">Netherlands</string>
    <string name="norway">Norway</string>
    <string name="peru">Peru</string>
    <string name="philippines">Philippines</string>
    <string name="portugal">Portugal</string>
    <string name="singapore">Singapore</string>
    <string name="south_africa">South Africa</string>
    <string name="south_korea">South Korea</string>
    <string name="switzerland">Switzerland</string>
    <string name="taiwan">Taiwan</string>
    <string name="thailand">Thailand</string>
    <string name="turkey">Turkey</string>
    <string name="ukraine">Ukraine</string>
    <string name="united_arab_emirates">UAE</string>
    <string name="vietnam">Vietnam</string>


    <string name="friend_request">Friend Request</string>
    <string name="friend_request_accepted">Friend Request Accepted</string>
    <string name="you_were_liked_by_username">You were liked by %s</string>
    <string name="your_friend_request_was_accepted_by_username">Your friend request was accepted by %s</string>

    <string name="all_fields_are_required">All fields are required</string>
    <string name="authentication_failed">Authentication failed!</string>

    <string name="find_friends">Find Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>

    <string name="you_cannot_send_an_empty_message">You cannot send an empty message</string>
    <string name="password_must_be_at_least_6_chars">Password must be at least 6 characters</string>
    <string name="you_cannot_register_with_this_email_or_password">You cannot register with this email or password</string>
    <string name="please_check_your_email">Please check your email</string>
    <string name="uploading_image">Uploading</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="type_a_message">Type a message…</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="your_email">Your Email</string>
    <string name="reset_password_button">Reset</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_you_password">By clicking RESET, you will receive an email to reset you password</string>
    <string name="profile_is_loading">Profile loading</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="gender">Gender</string>
    <string name="log_out">Log out</string>
    <string name="click_to_translate">click to translate</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="no_date_selected">No date selected</string>
    <string name="no_biography">No biography</string>
    <string name="please_wait">Please wait…</string>
    <string name="finish_registration">Finish registration</string>
    <string name="translation_error">Translation error!</string>
    <string name="app_theme">App Theme</string>
    <string name="unknown_country">Unknown country! Update the app</string>
    <string name="unknown_language">Unknown language! Update the app</string>
    <string name="same_lang">This is the language you speak &#129300;</string>
    <string name="click_here_to_change_your_profile_image">Click here to change your profile image</string>

    <string-array name="gender">
        <item>Not selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
