<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:textCursorDrawable="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:textColorHint="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            app:met_baseColor="@color/colorWhite"
            app:met_underlineColor="@color/colorWhite"
            app:met_textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColor="@color/colorWhite"
            app:met_textColorHint="@color/colorWhite"
            android:hint="@string/your_email"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_button"
            android:id="@+id/btn_reset"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:text="@string/by_clicking_reset_you_will_receive_an_email_to_reset_you_password"/>

    </LinearLayout>

</LinearLayout>